# upstream_people

./: .gitignore  CLAUDE.md  pyproject.toml
benchmarks/: bench_evaluator.py
cli/: app.py  display.py  input_handler.py
data/: README.md
docs/: ai_players.md  architecture.md  key_objects.md
examples/: basic_analysis.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/shared/: Card.tsx  Layout.tsx
frontend/src/hooks/: useAnalysis.ts  useGameSocket.ts
frontend/src/pages/: Lab.tsx  Lobby.tsx  RangeRoom.tsx  StrategyMap.tsx  TableRoom.tsx
frontend/src/theme/: global.css  tokens.ts
frontend/src/types/: game.ts
plo_engine/: __init__.py  analysis.py  betting.py  cfr.py  deck.py  domain.py  equity.py  ev.py  game_tree.py  hand_evaluator.py  hand_evaluator_jax.py  hand_history.py  hand_state.py  opponent_model.py  player.py  showdown.py  table.py  tournament.py  types.py  utils.py
plo_engine/players/: __init__.py  heuristic_player.py
scripts/: precompute_starting_hands.py
server/: __init__.py  engine_bridge.py  main.py  serializers.py  ws_player.py
server/routes/: analysis.py  game.py
tests/: test_analysis.py  test_betting.py  test_deck.py  test_domain.py  test_equity.py  test_ev.py  test_hand_evaluator.py  test_hand_evaluator_jax.py  test_hand_state.py  test_heuristic_player.py  test_showdown.py  test_tournament.py  test_types.py
